compiler/test/snapshot/infer-expr/error-when-updating-structs.exp
Error when updating structs.

SOURCE:
{
  struct Foo { a: int }

  let mut x = Foo { a: 1 }
  x.a = "foo"
}

OUTPUT:
Type mismatch
Expected:
    int
Got:
    string

5|    x.a = "foo"
      ^^^^^^^^^^^